[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/plunger_anim/tile003.png" type="Texture" id=1]
[ext_resource path="res://assets/plunger_anim/tile002.png" type="Texture" id=2]
[ext_resource path="res://scripts/Player.gd" type="Script" id=3]
[ext_resource path="res://assets/plunger_anim/tile001.png" type="Texture" id=4]
[ext_resource path="res://assets/plunger_anim/tile000.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "shoot",
"speed": 12.0
} ]

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 0.75, 0.75 )
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "idle"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 30, -12, 28, -14, 26, -14, 18, -6, -30, -4, -30, 0, 18, 2, 26, 10, 28, 10, 30, 8 )

[node name="ReloadSpeed" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="PowerUpCoolDown" type="Timer" parent="."]
one_shot = true

[node name="Hitbox" type="Area2D" parent="." groups=["Player"]]

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Hitbox"]
polygon = PoolVector2Array( 30, -12, 28, -14, 26, -14, 18, -6, -30, -4, -30, 0, 18, 2, 26, 10, 28, 10, 30, 8 )

[connection signal="timeout" from="ReloadSpeed" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="PowerUpCoolDown" to="." method="_on_PowerUpCoolDown_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
